--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,40 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
-- test
-sast:
-  stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+  - build
+  - deploy
+
+jupyter-build:
+  stage: build
+  image: registry.gitlab.com/celmo/lifework:latest
+  script:
+    # Source conda env from what found in bashrc
+    - echo $(ls)
+    - source activate $(head -1 ~/.bashrc | cut -d' ' -f3)
+    - jupyter-book clean ./book
+    - jupyter-book build ./book
+  artifacts:
+    paths:
+      - ./book/_build/
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /ci-run/
+      when: always
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+      when: always
+    - when: never
+  tags:
+    - docker
+pages:
+  stage: deploy
+  image: busybox:latest
+  script:
+    - mv ./book/_build/html public
+  artifacts:
+    paths:
+      - public
+  rules:
+    - if: $CI_COMMIT_MESSAGE =~ /ci-run/
+      when: always
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+      when: always
+    - when: never
+  tags:
+    - docker
