--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,7 +13,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-18.04
     container: 
-      image: ghcr.io/symmehub/positron/positron:latest
+      image: ghcr.io/elmokulc/lifework:latest
       credentials:
         username: elmokulc
         password: ${{  secrets.DOCKER_CONTAINER_REGISTRY_TOKEN }}
