--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: "Build Book"
         run : |
-          source activate $(head -1 ~/.bashrc | cut -d' ' -f3)
+          # source activate $(head -1 ~/.bashrc | cut -d' ' -f3)
           jupyter-book clean ./book
           jupyter-book build ./book
 
