--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -41,8 +41,9 @@ jobs:
       # 3. Déploiement sur les Github Pages
 
       - name: "Deploy Github Pages"
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: ad-m/github-push-action@v0.5.0
         with:
-          GITHUB_TOKEN: ${{ secrets.PERSO_TOKEN }}
-          BRANCH: gh-pages     # <- Branche sur laquelle seront commités les fichiers
-          FOLDER: ./book/_build/html/  # <- Dossier contenant notre documentation générée
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          force: true
+          directory: ./book/_build/html/  # <- Dossier contenant notre documentation générée
