--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: base
 channels:
   - plotly
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
@@ -17,19 +18,23 @@ dependencies:
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - beautifulsoup4=4.10.0=pyha770c72_0
   - bleach=4.1.0=pyhd8ed1ab_0
+  - blosc=1.21.0=h9c3ff4c_0
   - brotli=1.0.9=h7f98852_6
   - brotli-bin=1.0.9=h7f98852_6
   - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f98852_0
   - ca-certificates=2021.10.8=ha878542_0
   - charset-normalizer=2.0.10=pyhd8ed1ab_0
   - click=7.1.2=pyh9f0ad1d_0
   - click-log=0.3.2=pyh9f0ad1d_0
+  - cmake=3.21.3=h8897547_0
   - colorama=0.4.4=pyh9f0ad1d_0
   - cycler=0.11.0=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
   - dbus=1.13.6=h5008d03_3
   - decorator=5.1.1=pyhd8ed1ab_0
   - defusedxml=0.7.1=pyhd8ed1ab_0
+  - distro=1.6.0=pyhd8ed1ab_0
   - entrypoints=0.3=pyhd8ed1ab_1003
   - expat=2.4.4=h9c3ff4c_0
   - flit-core=3.6.0=pyhd8ed1ab_0
@@ -47,6 +52,7 @@ dependencies:
   - gitpython=3.1.26=pyhd8ed1ab_0
   - gst-plugins-base=1.18.5=hf529b03_3
   - gstreamer=1.18.5=h9f60fe5_3
+  - hdf5=1.12.1=nompi_h2750804_103
   - icu=69.1=h9c3ff4c_0
   - idna=3.3=pyhd8ed1ab_0
   - imagesize=1.3.0=pyhd8ed1ab_0
@@ -80,8 +86,10 @@ dependencies:
   - libbrotlienc=1.0.9=h7f98852_6
   - libcblas=3.9.0=13_linux64_openblas
   - libclang=13.0.0=default_hc23dcda_0
+  - libcurl=7.81.0=h2574ce0_0
   - libdeflate=1.8=h7f98852_0
   - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
   - libevent=2.1.10=h9b69904_4
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=11.2.0=h1d223b6_12
@@ -92,6 +100,7 @@ dependencies:
   - libiconv=1.16=h516909a_0
   - liblapack=3.9.0=13_linux64_openblas
   - libllvm13=13.0.0=hf817b99_0
+  - libnghttp2=1.46.0=h812cca2_0
   - libnsl=2.0.0=h7f98852_0
   - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.18=pthreads_h8fe5266_0
@@ -99,9 +108,12 @@ dependencies:
   - libpng=1.6.37=h21135ba_2
   - libpq=14.1=hd57d9b9_1
   - libsodium=1.0.18=h36c2ea0_1
+  - libspatialindex=1.9.3=h9c3ff4c_4
+  - libssh2=1.10.0=ha56f1ee_2
   - libstdcxx-ng=11.2.0=he4da1e4_12
   - libtiff=4.3.0=h6f004c6_2
   - libuuid=2.32.1=h7f98852_1000
+  - libuv=1.43.0=h7f98852_0
   - libvorbis=1.3.7=h9c3ff4c_0
   - libwebp-base=1.2.2=h7f98852_1
   - libxcb=1.13=h7f98852_1004
@@ -110,6 +122,7 @@ dependencies:
   - libzlib=1.2.11=h36c2ea0_1013
   - linkify-it-py=1.0.3=pyhd8ed1ab_0
   - lz4-c=1.9.3=h9c3ff4c_1
+  - lzo=2.10=h516909a_1000
   - markdown-it-py=1.1.0=pyhd8ed1ab_0
   - matplotlib-base=3.5.1=py310h23f4a51_0
   - matplotlib-inline=0.1.3=pyhd8ed1ab_0
@@ -125,6 +138,9 @@ dependencies:
   - nbformat=5.1.3=pyhd8ed1ab_0
   - ncurses=6.3=h9c3ff4c_0
   - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - networkx=2.5=py_0
+  - ninja=1.10.2=h4bd325d_1
+  - nomkl=1.0=h5ca1d4c_0
   - notebook=6.4.8=pyha770c72_0
   - nspr=4.32=h9c3ff4c_1
   - nss=3.74=hb5efdd6_0
@@ -154,6 +170,7 @@ dependencies:
   - pyppeteer=1.0.2=pyhd8ed1ab_0
   - pyqt=5.12.3=py310hff52083_8
   - pyqt-impl=5.12.3=py310h1f8e252_8
+  - pytables=3.7.0=py310hf5df6ce_0
   - python=3.10.2=h85951f9_2_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-utils=3.1.0=pyhd8ed1ab_0
@@ -162,6 +179,8 @@ dependencies:
   - qt=5.12.9=ha98a1a1_5
   - readline=8.1=h46c0cb4_0
   - requests=2.27.1=pyhd8ed1ab_0
+  - rhash=1.4.1=h7f98852_0
+  - scikit-build=0.13.0=pyhca92ed8_0
   - send2trash=1.8.0=pyhd8ed1ab_0
   - shellingham=1.4.0=pyh44b312d_0
   - six=1.16.0=pyh6c4a22f_0
@@ -220,6 +239,7 @@ dependencies:
     - docutils==0.15.2
     - fonttools==4.29.0
     - greenlet==1.1.2
+    - imageio==2.14.1
     - importlib-metadata==4.10.1
     - ipykernel==6.7.0
     - ipython==7.31.1
@@ -231,8 +251,12 @@ dependencies:
     - markupsafe==2.0.1
     - matplotlib==3.5.1
     - mistune==0.8.4
+    - more-itertools==8.12.0
+    - numexpr==2.8.0
     - numpy==1.22.1
     - numpy-stl==2.16.3
+    - opencv-contrib-python==4.5.5.62
+    - opencv-python==4.5.5.62
     - pandas==1.4.0
     - pillow==8.4.0
     - pybtex-docutils==1.0.1
@@ -242,14 +266,19 @@ dependencies:
     - pyqtwebengine==5.12.1
     - pyrsistent==0.18.1
     - pysocks==1.7.1
+    - pywavelets==1.2.0
     - pyyaml==6.0
     - pyzmq==22.3.0
+    - rtree==0.9.7
+    - scikit-image==0.19.1
     - scipy==1.7.3
     - setuptools==60.6.0
     - sniffio==1.2.0
     - sqlalchemy==1.4.31
+    - tables==3.7.0
     - tenacity==8.0.1
     - terminado==0.13.1
+    - tifffile==2022.2.2
     - tornado==6.1
     - unicodedata2==14.0.0
     - websockets==10.1
