--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: base
 channels:
   - plotly
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
@@ -20,13 +21,14 @@ dependencies:
   - blosc=1.21.0=h9c3ff4c_0
   - brotli=1.0.9=h7f98852_6
   - brotli-bin=1.0.9=h7f98852_6
+  - brotli-python=1.0.9=py38heb0550a_2
   - brotlipy=0.7.0=py38h497a2fe_1003
   - brunsli=0.1=h9c3ff4c_0
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
   - c-blosc2=2.0.4=h5f21a17_1
-  - ca-certificates=2021.10.8=ha878542_0
-  - certifi=2021.10.8=py38h578d9bd_1
+  - ca-certificates=2021.10.26=h06a4308_2
+  - certifi=2021.10.8=py38h06a4308_2
   - cffi=1.15.0=py38h3931269_0
   - cfitsio=4.0.0=h9a35b8e_0
   - charls=2.2.0=h9c3ff4c_0
@@ -39,6 +41,9 @@ dependencies:
   - cryptography=36.0.0=py38h9ce1e76_0
   - cycler=0.11.0=pyhd8ed1ab_0
   - cytoolz=0.11.2=py38h497a2fe_1
+  - dash=2.1.0=pyhd8ed1ab_0
+  - dash-core-components=1.3.1=py_0
+  - dash-html-components=1.0.1=py_0
   - dask-core=2022.1.1=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
   - debugpy=1.5.1=py38h709712a_0
@@ -47,6 +52,8 @@ dependencies:
   - docutils=0.16=py38h578d9bd_3
   - embree=2.17.7=ha770c72_1
   - entrypoints=0.4=pyhd8ed1ab_0
+  - flask=2.0.2=pyhd3eb1b0_0
+  - flask-compress=1.10.1=pyhd3eb1b0_0
   - flit-core=3.6.0=pyhd8ed1ab_0
   - fonttools=4.29.1=py38h497a2fe_0
   - freetype=2.10.4=h0708190_1
@@ -68,6 +75,7 @@ dependencies:
   - ipython=7.31.1=py38h578d9bd_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.6.5=pyhd8ed1ab_0
+  - itsdangerous=2.0.1=pyhd3eb1b0_0
   - jbig=2.1=h7f98852_2003
   - jedi=0.18.1=py38h578d9bd_0
   - jinja2=3.0.3=pyhd8ed1ab_0
@@ -98,7 +106,7 @@ dependencies:
   - libcblas=3.9.0=13_linux64_openblas
   - libcurl=7.81.0=h494985f_0
   - libdeflate=1.8=h7f98852_0
-  - libedit=3.1.20191231=he28a2e2_2
+  - libedit=3.1.20191231=h14c3975_1
   - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=11.2.0=h1d223b6_12
@@ -178,7 +186,7 @@ dependencies:
   - pywavelets=1.2.0=py38h6c62de6_1
   - pyyaml=6.0=py38h497a2fe_3
   - pyzmq=22.3.0=py38h2035c66_1
-  - readline=8.1=h46c0cb4_0
+  - readline=8.1.2=h7f8727e_1
   - requests=2.27.1=pyhd8ed1ab_0
   - rtree=0.9.7=py38h02d302b_3
   - scikit-image=0.19.1=py38h43a58ef_0
@@ -211,7 +219,7 @@ dependencies:
   - sphinxcontrib-qthelp=1.0.3=py_0
   - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_1
   - sqlalchemy=1.4.31=py38h497a2fe_0
-  - sqlite=3.37.0=h9cd32fc_0
+  - sqlite=3.37.2=hc218d9a_0
   - tenacity=8.0.1=py38h06a4308_0
   - terminado=0.13.1=py38h578d9bd_0
   - testpath=0.5.0=pyhd8ed1ab_0
@@ -229,6 +237,7 @@ dependencies:
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - webencodings=0.5.1=py_1
   - websocket-client=1.2.3=pyhd8ed1ab_0
+  - werkzeug=2.0.2=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd8ed1ab_0
   - widgetsnbextension=3.5.2=py38h578d9bd_1
   - xorg-libxau=1.0.9=h7f98852_0
@@ -253,9 +262,11 @@ dependencies:
     - more-itertools==8.12.0
     - mpmath==1.2.1
     - msgpack==1.0.3
+    - numexpr==2.8.1
     - opencv-contrib-python==4.5.5.62
     - opencv-python==4.5.5.62
     - psutil==5.9.0
+    - pycairo==1.20.1
     - pycollada==0.7.2
     - pyglet==1.5.21
     - python-fcl==0.6.1
@@ -263,6 +274,7 @@ dependencies:
     - signature-dispatch==1.0.0
     - svg-path==4.1
     - sympy==1.9
+    - tables==3.7.0
     - triangle==20220202
     - trimesh==3.9.43
     - typeguard==2.13.3
