--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - anyio=3.5.0=py38h578d9bd_0
   - argon2-cffi=21.3.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py38h497a2fe_1
+  - atk-1.0=2.36.0=h3371d22_4
   - attrs=21.4.0=pyhd8ed1ab_0
   - babel=2.9.1=pyh44b312d_0
   - backcall=0.2.0=pyh9f0ad1d_0
@@ -27,8 +28,9 @@ dependencies:
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
   - c-blosc2=2.0.4=h5f21a17_1
-  - ca-certificates=2021.10.26=h06a4308_2
-  - certifi=2021.10.8=py38h06a4308_2
+  - ca-certificates=2021.10.8=ha878542_0
+  - cairo=1.16.0=ha00ac49_1009
+  - certifi=2021.10.8=py38h578d9bd_1
   - cffi=1.15.0=py38h3931269_0
   - cfitsio=4.0.0=h9a35b8e_0
   - charls=2.2.0=h9c3ff4c_0
@@ -52,18 +54,34 @@ dependencies:
   - docutils=0.16=py38h578d9bd_3
   - embree=2.17.7=ha770c72_1
   - entrypoints=0.4=pyhd8ed1ab_0
+  - expat=2.4.4=h9c3ff4c_0
   - flask=2.0.2=pyhd3eb1b0_0
   - flask-compress=1.10.1=pyhd3eb1b0_0
   - flit-core=3.6.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.13.96=ha180cfb_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
   - fonttools=4.29.1=py38h497a2fe_0
   - freetype=2.10.4=h0708190_1
   - fribidi=1.0.10=h36c2ea0_0
   - fsspec=2022.1.0=pyhd8ed1ab_0
+  - gdk-pixbuf=2.42.6=h04a7f16_0
   - geos=3.10.2=h9c3ff4c_0
+  - gettext=0.19.8.1=h73d1719_1008
   - giflib=5.2.1=h36c2ea0_2
   - gitdb=4.0.9=pyhd8ed1ab_0
   - gitpython=3.1.26=pyhd8ed1ab_0
+  - graphite2=1.3.13=h58526e2_1001
+  - graphviz=2.50.0=h8e749b2_2
   - greenlet=1.1.2=py38h709712a_1
+  - gtk2=2.24.33=h90689f9_2
+  - gts=0.7.6=h64030ff_2
+  - harfbuzz=3.4.0=hb4a5f5f_0
+  - icu=69.1=h9c3ff4c_0
   - idna=3.3=pyhd8ed1ab_0
   - imagecodecs=2021.11.20=py38h678ac2f_1
   - imageio=2.14.1=pyh239f2a4_0
@@ -110,23 +128,30 @@ dependencies:
   - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=11.2.0=h1d223b6_12
+  - libgd=2.3.3=h3cfcdeb_1
   - libgfortran-ng=11.2.0=h69a702a_12
   - libgfortran5=11.2.0=h5c6108e_12
+  - libglib=2.70.2=h174f98d_4
   - libgomp=11.2.0=h1d223b6_12
+  - libiconv=1.16=h516909a_0
   - libimagequant=2.17.0=h7f98852_1
   - liblapack=3.9.0=13_linux64_openblas
   - libnghttp2=1.46.0=ha19adfc_0
   - libnsl=2.0.0=h7f98852_0
   - libopenblas=0.3.18=pthreads_h8fe5266_0
   - libpng=1.6.37=h21135ba_2
+  - librsvg=2.52.5=h0a9e6e8_2
   - libsodium=1.0.18=h36c2ea0_1
   - libspatialindex=1.9.3=h9c3ff4c_4
   - libssh2=1.10.0=ha35d2d1_2
   - libstdcxx-ng=11.2.0=he4da1e4_12
   - libtiff=4.3.0=h6f004c6_2
+  - libtool=2.4.6=h9c3ff4c_1008
+  - libuuid=2.32.1=h7f98852_1000
   - libwebp=1.2.2=h3452ae3_0
   - libwebp-base=1.2.2=h7f98852_1
   - libxcb=1.13=h7f98852_1004
+  - libxml2=2.9.12=h885dcf4_1
   - libzlib=1.2.11=h36c2ea0_1013
   - libzopfli=1.0.3=h9c3ff4c_0
   - linkify-it-py=1.0.3=pyhd8ed1ab_0
@@ -141,6 +166,7 @@ dependencies:
   - munkres=1.1.4=pyh9f0ad1d_0
   - myst-nb=0.13.1=pyhd8ed1ab_0
   - myst-parser=0.15.2=pyhd8ed1ab_0
+  - nb_conda_kernels=2.3.1=py38h578d9bd_1
   - nbclient=0.5.10=pyhd8ed1ab_1
   - nbconvert=6.4.1=py38h578d9bd_0
   - nbdime=3.1.1=pyhd8ed1ab_0
@@ -157,12 +183,15 @@ dependencies:
   - pandas=1.4.0=py38h43a58ef_0
   - pandoc=2.17.1.1=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - pango=1.50.3=h9967ed3_0
   - parso=0.8.3=pyhd8ed1ab_0
   - partd=1.2.0=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
   - pexpect=4.8.0=pyh9f0ad1d_2
   - pickleshare=0.7.5=py_1003
   - pillow=9.0.1=py38he2f12e7_0
   - pip=22.0.3=pyhd8ed1ab_0
+  - pixman=0.40.0=h36c2ea0_0
   - plotly=5.5.0=py_0
   - prometheus_client=0.13.1=pyhd8ed1ab_0
   - prompt-toolkit=3.0.26=pyha770c72_0
@@ -174,6 +203,7 @@ dependencies:
   - pydata-sphinx-theme=0.7.2=pyhd8ed1ab_0
   - pyembree=0.1.6=py38hcb8c335_1
   - pygments=2.11.2=pyhd8ed1ab_0
+  - pygraphviz=1.9=py38h86b1bdd_0
   - pyopenssl=22.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.7=pyhd8ed1ab_0
   - pyrsistent=0.18.1=py38h497a2fe_0
@@ -240,8 +270,17 @@ dependencies:
   - werkzeug=2.0.2=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd8ed1ab_0
   - widgetsnbextension=3.5.2=py38h578d9bd_1
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.7.2=h7f98852_0
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h516909a_1
   - yaml=0.2.5=h7f98852_2
   - zeromq=4.3.4=h9c3ff4c_1
@@ -256,6 +295,7 @@ dependencies:
     - commonmark==0.9.1
     - cython==0.29.27
     - glooey==0.3.6
+    - kaleido==0.2.1
     - lxml==4.7.1
     - mapbox-earcut==1.0.0
     - meshio==5.3.0
@@ -266,6 +306,7 @@ dependencies:
     - opencv-contrib-python==4.5.5.62
     - opencv-python==4.5.5.62
     - psutil==5.9.0
+    - pycairo==1.20.1
     - pycollada==0.7.2
     - pyglet==1.5.21
     - python-fcl==0.6.1
@@ -278,6 +319,6 @@ dependencies:
     - trimesh==3.9.43
     - typeguard==2.13.3
     - vecrec==0.3.1
+    - wget==3.2
     - xatlas==0.0.6
     - xxhash==2.0.2
-
